2021-02-07  Robby Stephenson  <robby@periapsis.org>

	* Added UPCItemDB.com data source.

2020-12-27  Robby Stephenson  <robby@periapsis.org>

	* Added additional report with QtCharts.

2020-12-25  Robby Stephenson  <robby@periapsis.org>

	* Improved template refresh on palette or color change.

2020-12-13  Robby Stephenson  <robby@periapsis.org>

	* Switched to use QWebEngine over KHTML by default, when available.

2020-12-08  Robby Stephenson  <robby@periapsis.org>

	* Fixed audio metadata import from directories (Bug 429803).

2020-12-01  Robby Stephenson  <robby@periapsis.org>

	* Fixed import failure bug in reading mp3 artist (Bug 429803).

2020-11-25  Robby Stephenson  <robby@periapsis.org>

	* Released 3.3.4.

2020-11-22  Robby Stephenson  <robby@periapsis.org>

	* Fixed text in group view to use correct color (Bug 429475).
	* Added data source for TVmaze.com.
	* Added barcode searching to MusicBrainz data source (Bug 429483).

2020-11-01  Robby Stephenson  <robby@periapsis.org>

	* Added barcode searching to Discogs data source.

2020-10-25  Robby Stephenson  <robby@periapsis.org>

	* Added sorting in the group view, via context menu.

2020-10-11  Robby Stephenson  <robby@periapsis.org>

	* Improve "Filter by Group" expression to account for tables (Bug 427145).
	* Switch to QRegularExpression from QRegExp for filtering.

2020-10-04  Robby Stephenson  <robby@periapsis.org>

	* Updated IGDB data source to APIv4.

2020-09-22  Robby Stephenson  <robby@periapsis.org>

	* Fixed crashing bug when checking in a loan (Bug 426815).

2020-09-17  Robby Stephenson  <robby@periapsis.org>

	* Added data source for Numista.com.

2020-09-16  Robby Stephenson  <robby@periapsis.org>

	* Enabled general keyword search for MusicBrainz data source (Bug 426560).

2020-09-13  Robby Stephenson  <robby@periapsis.org>

	* Released Tellico 3.3.3.
	* Improved Entrez data source to use API key and honor rate limit.

2020-09-02  Robby Stephenson  <robby@periapsis.org>
